<resources>
    <string name="app_name">Cocktail Database</string>
    <string name="action_settings">Settings</string>
    <string name="hint_text"> Type here:</string>
    <string name="cocktail_button">Cocktail</string>
    <string name="pexel_button">Pexel</string>
    <string name="owlbot_button">Owlbot</string>
    <string name="nutrition_button">nutrition</string>
    <string name="enter_button">Search</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="thumbnail">thumbnail</string>
    <string name="instructions">instructions</string>

    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="Saved">Saved!!</string>

    <string name="detail_has_no_intent">intent is null !</string>
    <string name="detail_has_no_id">id is null !</string>
    <string name="detail_alert_confirm">confirm</string>
    <string name="detail_alert_cancel">cancel</string>
    <string name="detail_delete_database_confirm">Are you sure to delete detail from database?</string>
    <string name="detail_menu_author">author</string>
    <string name="detail_menu_description">description</string>
    <string name="detail_menu_version">version</string>
    <string name="detail_menu_favourite">favourite</string>
    <string name="detail_menu_author_content">lian0094</string>
    <string name="detail_menu_description_content">this is detail info</string>
    <string name="detail_menu_version_content">V1.0.0</string>
    <string name="detail_label">detail</string>

    <string name="favourite_menu_description_content">this is my favourite activity</string>


</resources>