<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/cocktail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="113dp"
        android:layout_marginEnd="287dp"
        android:layout_marginBottom="570dp"
        android:text="@string/cocktail_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button

        android:id="@+id/pexel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="1dp"
        android:text="@string/pexel_button"
        app:layout_constraintBottom_toTopOf="@+id/nutrition_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cocktail_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/owlbot_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="166dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="355dp"
        android:text="@string/owlbot_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nutrition_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cocktail_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/nutrition_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="169dp"
        android:layout_marginTop="167dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="356dp"
        android:text="@string/nutrition_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/owlbot_button"
        app:layout_constraintTop_toBottomOf="@+id/pexel_button" />

</androidx.constraintlayout.widget.ConstraintLayout>