<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment"
    android:id="@+id/fragmentLocation">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/thumbnail"
                android:layout_gravity="fill_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thumbnail" />
            <TextView
                android:id="@+id/instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="instruction"
                />
            <TextView
            android:id="@+id/ingredients1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ingredients"
            />
            <TextView
                android:id="@+id/ingredients2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ingredients"
                />
            <TextView
                android:id="@+id/ingredients3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ingredients"
                />
        </LinearLayout>
        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="112dp"
                    android:text="@string/save"
                    />

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="112dp"
                    android:text="@string/delete" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>